# chinese-anki-pipeline

./: .gitignore  README.md  config.json  ollama_integration_results.txt  pyproject.toml  setup.ps1  verify_template.py
src/: config.py  deck_builder.py  main.py  models.py  pinyin_generator.py  scraper.py  tts_generator.py  utils.py  validator.py
tests/: conftest.py  test_config.py  test_deck_builder.py  test_groq_integration.py  test_main.py  test_models.py  test_ollama_integration.py  test_pinyin_generator.py  test_scraper.py  test_tts_generator.py  test_utils.py  test_validator.py
tests/fixtures/: grammar_liju_alt_class.html  grammar_no_liju_table_only.html  grammar_pinyin_as_py_class.html  grammar_trans_in_last_td.html  index_no_wikitable_class.html  index_shuffled_columns.html  sample_grammar_page.html  sample_index.html  sample_level_data.json
